# job_parser

./: .gitignore  README.md  main.py  pyproject.toml
src/: HeadHunterAPI.py  JSONSaver.py  Vacancy.py  func.py
tests/: conftest.py  test_HeadHunterAPI.py  test_JSONSaver.py  test_func.py  test_vacancy.py
