[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["valya_plotnikova <valya_ezhova@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
requests = "^2.32.1"
config = "^0.5.1"
pyproject-toml = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
